--- a/app/src/main/res/layout/history_list_item.xml
+++ b/app/src/main/res/layout/history_list_item.xml
@@ -9,6 +9,8 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         android:id="@+id/history_quiz_title"
-        android:padding="@dimen/default_padding" />
+        android:textSize="@dimen/medium_font_size"
+        android:paddingHorizontal="@dimen/horizontal_list_padding"
+        android:paddingVertical="@dimen/vertical_list_padding"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
