--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,7 @@
     <color name="backgroundSelected">#e8d044</color>
     <color name="quizBackground">#f3f0f3</color>
     <color name="colorText">#333333</color>
+
+    <color name="colorAnswerCorrect">#00612A</color>
+    <color name="colorAnswerIncorrect">#D81B60</color>
 </resources>
