--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,6 @@
     <dimen name="default_padding">12dp</dimen>
     <dimen name="option_padding">6dp</dimen>
     <dimen name="medium_font_size">24sp</dimen>
+    <dimen name="horizontal_list_padding">16dp</dimen>
+    <dimen name="vertical_list_padding">12dp</dimen>
 </resources>
