--- a/app/src/main/res/layout/fragment_history_detail.xml
+++ b/app/src/main/res/layout/fragment_history_detail.xml
@@ -11,7 +11,8 @@
         android:gravity="center"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@id/detail_solution"
+        android:textSize="@dimen/medium_font_size"
+        app:layout_constraintBottom_toTopOf="@id/show_answer_button"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_margin="@dimen/default_padding"/>
@@ -21,18 +22,32 @@
         android:gravity="center"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:textSize="@dimen/medium_font_size"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        android:visibility="invisible"
         android:layout_margin="@dimen/default_padding"/>
+
+    <Button
+        android:id="@+id/show_answer_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_margin="@dimen/default_padding"
+        android:text="@string/show_answer" />
 
     <TextView
         android:id="@+id/detail_second_part"
         android:gravity="center"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/detail_solution"
+        android:textSize="@dimen/medium_font_size"
+        app:layout_constraintTop_toBottomOf="@id/show_answer_button"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_margin="@dimen/default_padding"/>
